--- a/apps/contracts/package.json
+++ b/apps/contracts/package.json
@@ -50,6 +50,8 @@
         "typescript": "^5.3.3"
     },
     "dependencies": {
+        "@hashgraph/smart-contracts": "github:hashgraph/hedera-smart-contracts",
+        "@openzeppelin/contracts": "^5.4.0",
         "@semaphore-protocol/contracts": "4.11.1"
     },
     "packageManager": "yarn@4.1.0"
