--- a/apps/contracts/package.json
+++ b/apps/contracts/package.json
@@ -4,7 +4,8 @@
     "scripts": {
         "dev": "hardhat node & yarn deploy --network localhost",
         "compile": "hardhat compile",
-        "deploy": "yarn compile && hardhat deploy",
+        "build": "hardhat build",
+        "deploy": "yarn build && hardhat run",
         "verify": "hardhat verify",
         "test": "hardhat test",
         "test:report-gas": "REPORT_GAS=true hardhat test",
@@ -15,23 +16,30 @@
         "prettier:write": "prettier -w --plugin=prettier-plugin-solidity ."
     },
     "devDependencies": {
-        "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
-        "@nomicfoundation/hardhat-ethers": "^3.0.0",
-        "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-        "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-        "@nomicfoundation/hardhat-verify": "^2.0.0",
+        "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
+        "@nomicfoundation/hardhat-ethers": "^4.0.2",
+        "@nomicfoundation/hardhat-ethers-chai-matchers": "^3.0.0",
+        "@nomicfoundation/hardhat-ignition": "^3.0.3",
+        "@nomicfoundation/hardhat-ignition-ethers": "^3.0.3",
+        "@nomicfoundation/hardhat-keystore": "^3.0.2",
+        "@nomicfoundation/hardhat-mocha": "^3.0.4",
+        "@nomicfoundation/hardhat-network-helpers": "^3.0.1",
+        "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+        "@nomicfoundation/hardhat-toolbox-mocha-ethers": "^3.0.0",
+        "@nomicfoundation/hardhat-typechain": "^3.0.0",
+        "@nomicfoundation/hardhat-verify": "^3.0.4",
+        "@nomicfoundation/ignition-core": "^3.0.3",
         "@semaphore-protocol/core": "4.11.1",
-        "@semaphore-protocol/hardhat": "4.11.1",
         "@semaphore-protocol/utils": "4.11.1",
-        "@typechain/ethers-v6": "^0.5.0",
-        "@typechain/hardhat": "^9.0.0",
+        "@typechain/ethers-v6": "^0.5.1",
+        "@typechain/hardhat": "^9.1.0",
         "@types/chai": "^4.2.0",
         "@types/eslint": "^8",
         "@types/mocha": ">=9.1.0",
         "@types/node": "^20.11.20",
         "@typescript-eslint/eslint-plugin": "^7.0.2",
         "@typescript-eslint/parser": "^7.0.2",
-        "chai": "^4.2.0",
+        "chai": "^6.2.0",
         "dotenv": "^16.4.5",
         "eslint": "^8.57.0",
         "eslint-config-airbnb-base": "^15.0.0",
@@ -39,20 +47,22 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.29.1",
         "ethers": "^6.13.4",
-        "hardhat": "^2.20.1",
-        "hardhat-gas-reporter": "^1.0.8",
+        "hardhat": "^3.0.9",
+        "hardhat-gas-reporter": "^2.3.0",
         "prettier": "^3.2.5",
         "prettier-plugin-solidity": "^1.3.1",
         "solhint": "^4.1.1",
-        "solidity-coverage": "^0.8.1",
+        "solidity-coverage": "^0.8.16",
         "ts-node": "^10.9.2",
-        "typechain": "^8.3.0",
+        "typechain": "^8.3.2",
         "typescript": "^5.3.3"
     },
     "dependencies": {
+        "@hashgraph/sdk": "^2.75.0",
         "@hashgraph/smart-contracts": "github:hashgraph/hedera-smart-contracts",
         "@openzeppelin/contracts": "^5.4.0",
         "@semaphore-protocol/contracts": "4.11.1"
     },
+    "type": "module",
     "packageManager": "yarn@4.1.0"
 }
