add: cli Test for anonymised voting, with auto-generated python test scenarios

--- a/apps/contracts/package.json
+++ b/apps/contracts/package.json
@@ -6,6 +6,7 @@
         "compile": "hardhat compile",
         "build": "hardhat build",
         "deploy": "yarn build && hardhat run",
+        "deploy:semaphore": "yarn build && hardhat run scripts/deploySemaphore.ts",
         "verify": "hardhat verify",
         "test": "hardhat test",
         "test:report-gas": "REPORT_GAS=true hardhat test",
@@ -47,6 +48,7 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.29.1",
         "ethers": "^6.13.4",
+        "forge-std": "github:foundry-rs/forge-std",
         "hardhat": "^3.0.9",
         "hardhat-gas-reporter": "^2.3.0",
         "prettier": "^3.2.5",
