--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -9,19 +9,30 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@hashgraph/sdk": "^2.76.0",
+        "@reduxjs/toolkit": "^2.9.2",
+        "@reown/walletkit": "^1.4.1",
         "@semaphore-protocol/core": "4.11.1",
         "@semaphore-protocol/data": "4.11.1",
         "@semaphore-protocol/utils": "4.11.1",
+        "@walletconnect/core": "^2.23.0",
+        "@walletconnect/jsonrpc-utils": "^1.0.8",
+        "@walletconnect/utils": "^2.23.0",
+        "buffer": "^6.0.3",
         "ethers": "^6.13.4",
+        "hashconnect": "^3.0.14",
         "next": "14.1.0",
         "next-pwa": "^5.6.0",
+        "process": "^0.11.10",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "react-redux": "^9.2.0"
     },
     "devDependencies": {
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@walletconnect/types": "^2.23.0",
         "dotenv": "^16.4.5",
         "eslint": "^8",
         "eslint-config-next": "14.1.0",
